--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.3",
     "nodemon": "^2.0.15",
-    "validator": "^13.7.0"
+    "validator": "^13.7.0",
+    "vercel": "^24.0.0"
   },
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Ashu0126/lernr_lms.git"
