--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "node": "14.x"
   },
   "scripts": {
-    "start": "node app.js",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install npm && run build"
+    "start": "node app.js"
   },
   "author": "",
   "license": "ISC",
